updated app configurations